cambios form shop

--- a/pages/tienda/shop.html
+++ b/pages/tienda/shop.html
@@ -46,7 +46,7 @@
                 </div>
     
                 <div>
-                        p>Precio</p>
+                        <p>Precio</p>
                         <form action="#">
                         <label for="#">Min</label>
                         <input type="search" placeholder="0" />
@@ -57,15 +57,25 @@
     
                 <div> <!--Filtro de productos-->
                     <p>Filtrar</p>
-                    <form action="#">
-                        <input type="checkbox" name="nuevos">
-                        <label for="">Nuevos</label>
-                        <input type="checkbox">
-                        <label for="" name="ofertas">Ofertas</label>
-                        <input type="checkbox" name="especial">
-                        <label for="">Edicion especial</label>
-                        <input type="checkbox" name="favoritos">
-                        <label for="">Favoritos</label>
+                    <form action="#" class="filtrar">
+                        <ul>
+                            <li>
+                                <input type="checkbox" name="nuevos" style=": black;">
+                                <label for="">Nuevos</label>
+                            </li>
+                            <li>
+                                <input type="checkbox">
+                                <label for="" name="ofertas">Ofertas</label>
+                            </li>
+                            <li>
+                                <input type="checkbox" name="especial">
+                                <label for="">Edicion especial</label>
+                            </li>
+                            <li>
+                                <input type="checkbox" name="favoritos">
+                                <label for="">Favoritos</label>
+                            </li>
+                        </ul>
                     </form>
                 </div>
             </section>
