cambios form shop

--- a/pages/tienda/shop.html
+++ b/pages/tienda/shop.html
@@ -60,7 +60,7 @@
                     <form action="#" class="filtrar">
                         <ul>
                             <li>
-                                <input type="checkbox" name="nuevos" style=": black;">
+                                <input type="checkbox" name="nuevos">
                                 <label for="">Nuevos</label>
                             </li>
                             <li>
