cambios en login.html y login.css

--- a/pages/admin/login.html
+++ b/pages/admin/login.html
@@ -25,42 +25,43 @@
         </nav>
     </header><!--fin header-->
     <main><!--inicio cuerpo principal-->
+        <div class="login">
+            <span class="login-box">
+                <section> <!--Inicio de primera fila-->
+                        <span class="login-header">
+                            <h2>INGRESAR A MI CUENTA</h2>
+                        </span>
+                </section><!--fin de la primera fila-->
+                    <section><!--inicio de la segunda fila-->
+                        <div>
+                            <form action="#">
+                                <label for="email">Email:</label>
+                                <input type="email" id="email" name="email">
+                            </form>
+                        </div>
+                    </section><!--fin de la segunda fila-->
+                    <section><!--inicio de la tercera fila-->
+                        <form action="#">
+                            <label for="pwd">Contraseña:</label>
+                            <input type="password" id="pwd" name="pwd" value="**********">
+                        </form>
+                    </section><!--fin de la tercera fila-->
+                    <section><!--inicio de la cuarta fila-->
+                        <input type="submit" value="Ingresar">
+                        <form action="#">
+                            <input type="checkbox" id="recordar" name="recordar" value="recordarme">
+                            <label for="recordar"> Recordame</label><br>
 
-        <section> <!--Inicio de primera fila-->
-            <span class="login-header">
-                <h2>INGRESAR A MI CUENTA</h2>
+                        </form>
+                    </section><!--fin de la cuarta fila-->
+                    <section><!--inicio de la quinto fila-->
+                        <a href="#">
+                            <p>Olvidé mi contraseña</p>
+                        </a>
+                        <button><a href="./register.html">Registrate</a></button>
+                </section><!--fin de la quinto fila-->
             </span>
-        </section><!--fin de la primera fila-->
-        <section><!--inicio de la segunda fila-->
-            <div>
-                <form action="#">
-                    <label for="email">Email:</label>
-                    <input type="email" id="email" name="email">
-                </form>
-            </div>
-        </section><!--fin de la segunda fila-->
-        <section><!--inicio de la tercera fila-->
-            <form action="#">
-                <label for="pwd">Contraseña:</label>
-                <input type="password" id="pwd" name="pwd" value="**********">
-            </form>
-        </section><!--fin de la tercera fila-->
-        <section><!--inicio de la cuarta fila-->
-            <input type="submit" value="Ingresar">
-            <form action="#">
-                <input type="checkbox" id="recordar" name="recordar" value="recordarme">
-                <label for="recordar"> Recordame</label><br>
-
-            </form>
-        </section><!--fin de la cuarta fila-->
-        <section><!--inicio de la quinto fila-->
-            <a href="#">
-                <p>Olvidé mi contraseña</p>
-            </a>
-            <button><a href="./register.html">Registrate</a></button>
-        </section><!--fin de la quinto fila-->
-
-
+        </div>
     </main><!--fin cuerpo principal-->
 
     <footer><!--inicio footer seccion -->
