--- a/pages/admin/login.html
+++ b/pages/admin/login.html
@@ -29,23 +29,23 @@
             <span class="login-box">
                 <section> <!--Inicio de primera fila-->
                         <span class="login-header">
-                            <h2>INGRESAR A MI CUENTA</h2>
+                            <h4>INGRESAR A MI CUENTA</h4>
                         </span>
                 </section><!--fin de la primera fila-->
-                    <section><!--inicio de la segunda fila-->
-                        <div>
+                    <section><!--EMAIL-->
+                        <div> 
                             <form action="#">
                                 <label for="email">Email:</label>
-                                <input type="email" id="email" name="email">
+                                <input type="text" placeholder="ejemplo@correo.com">
                             </form>
                         </div>
-                    </section><!--fin de la segunda fila-->
-                    <section><!--inicio de la tercera fila-->
+                    </section><!--fin de la EMAIL-->
+                    <section><!--PASSWORD-->
                         <form action="#">
                             <label for="pwd">Contraseña:</label>
                             <input type="password" id="pwd" name="pwd" value="**********">
                         </form>
-                    </section><!--fin de la tercera fila-->
+                    </section><!--fin de PASSWORD-->
                     <section><!--inicio de la cuarta fila-->
                         <input type="submit" value="Ingresar">
                         <form action="#">
