corrección de links de imagenes y links css

--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
             </picture>
             <ul>
 
-                <li><a href="./pages/tienda/shop.html">SHOP</a></li>
+                <li><a href="./pages/shop/shop.html">SHOP</a></li>
                 <li> <a href="./pages/admin/register.html">CONTACTO</a></li>
                 <li> <a href="./pages/admin/login.html">LOGIN</a></li>
-                <li><a href="./pages/tienda/cart.html"> <img src="./img/icons/cart-icon.svg" alt="icono de carrito">
+                <li><a href="./pages/shop/cart.html"> <img src="./img/icons/cart-icon.svg" alt="icono de carrito">
                     </a> </li>
             </ul>
         </nav>
@@ -32,7 +32,7 @@
             <h3>Nuevos Ingresos</h3>
             <p> Descubrí el próximo Funko Pop de tu colección</p>
             <br><br>
-            <a href="./pages/tienda/shop.html"><input type=button class="boton-shop" value="SHOP"></a>
+            <a href="./pages/shop/shop.html"><input type=button class="boton-shop" value="SHOP"></a>
         </article>
 
     </section><!--fin banner-->
@@ -45,7 +45,7 @@
                 <br><br>
                 <p class="linea-3"></p>
                 <br><br>
-                <a href="./pages/tienda/shop.html"><input type=button class="boton-shop1" value="VER COLECCIÓN"></a>
+                <a href="./pages/shop/shop.html"><input type=button class="boton-shop1" value="VER COLECCIÓN"></a>
             </ARTICLE>
             <picture>
                 <img src="./img/star-wars/baby-yoda-1.webp" alt="Figura coleccionable de funko grogu">
@@ -58,7 +58,7 @@
                 <br><br>
                 <p class="linea-3"></p>
                 <br><br>
-                <a href="./pages/tienda/shop.html"><input type=button class="boton-shop1" value="VER COLECCIÓN"></a>
+                <a href="./pages/shop/shop.html"><input type=button class="boton-shop1" value="VER COLECCIÓN"></a>
             </ARTICLE>
             <picture>
                 <img src="./img/pokemon/vulpix-1.webp" alt="Figura coleccionable de funko vulpis de la serie pokemon">
@@ -71,7 +71,7 @@
                 <br><br>
                 <p class="linea-3"></p>
                 <br><br>
-                <a href="./pages/tienda/shop.html"><input type=button class="boton-shop1" value="VER COLECCIÓN"></a>
+                <a href="./pages/shop/shop.html"><input type=button class="boton-shop1" value="VER COLECCIÓN"></a>
             </ARTICLE>
             <picture>
                 <img src="./img/harry-potter/snape-patronus-1.webp"
@@ -121,9 +121,9 @@
         <nav class="container">
             <img src="./img/branding/isotype.svg" alt="isotipo de la marca funco.com">
             <ul>
-                <li><a href="./pages/tienda/shop.html">SHOP</a></li>
+                <li><a href="./pages/shop/shop.html">SHOP</a></li>
                 <li><a href="./pages/admin/create.html">INGRESAR</a></li>
-                <li><a href="./pages/tienda/contact.html">CONTACTO</a></li>
+                <li><a href="./pages/shop/contact.html">CONTACTO</a></li>
             </ul>
         </nav>
         <p>All rights reserved 2023 - Funkoshop &copy</p>
