corregimos y reagrupamos todos los botones en la archivo button, los flex utilizados se agruparon en el form y las tarjetas creadas se agruparon en el archivo card

--- a/pages/admin/login.html
+++ b/pages/admin/login.html
@@ -67,10 +67,10 @@
         <nav class="container">
             <img src="../../img/branding/isotype.svg" alt="isotipo de la marca funco.com">
             <ul>
-                <li><a href="../../pages/tienda/shop.html">SHOP</a></li>
+                <li><a href="../../pages/shop/shop.html">SHOP</a></li>
                 <li><a href="../../pages/admin/register.html">REGISTRARSE</a></li>
                 <li><a href="../../pages/admin/login.html">INGRESAR</a></li>
-                <li><a href="../../pages/tienda/contact.html">CONTACTO</a></li>
+                <li><a href="../../pages/shop/contact.html">CONTACTO</a></li>
             </ul>
         </nav>
         <p>All rights reserved 2023 - Funkoshop &copy</p>
