--- a/pages/shop/shop.html
+++ b/pages/shop/shop.html
@@ -17,10 +17,10 @@
             </picture>
             <ul>
 
-                <li><a href="../../pages/tienda/shop.html">SHOP</a></li>
+                <li><a href="../../pages/shop/shop.html">SHOP</a></li>
                 <li> <a href="../../pages/admin/register.html">CONTACTO</a></li>
-                <li> <a href="../../pages/tienda/login.html">LOGIN</a></li>
-                <li><a href="../../pages/tienda/cart.html"> <img src="../../img/icons/cart-icon.svg" alt="icono de carrito"> </a> </li>
+                <li> <a href="../../pages/admin/login.html">LOGIN</a></li>
+                <li><a href="../../pages/shop/cart.html"> <img src="../../img/icons/cart-icon.svg" alt="icono de carrito"> </a> </li>
             </ul>
         </nav>
     </header><!--fin header-->
@@ -214,9 +214,9 @@
         <nav class="container">
             <img src="../../img/branding/isotype.svg" alt="isotipo de la marca funco.com">
             <ul>
-                <li><a href="../../pages/tienda/shop.html">SHOP</a></li>
-                <li><a href="../../pages/tienda/login.html">INGRESAR</a></li>
-                <li><a href="../../pages/tienda/contact.html">CONTACTO</a></li>
+                <li><a href="../../pages/shop/shop.html">SHOP</a></li>
+                <li><a href="../../pages/shop/login.html">INGRESAR</a></li>
+                <li><a href="../../pages/shop/contact.html">CONTACTO</a></li>
             </ul>
         </nav>
         <p>All rights reserved 2023 - Funkoshop &copy</p>
