--- a/pages/admin/login.html
+++ b/pages/admin/login.html
@@ -32,33 +32,32 @@
                             <h1>INGRESAR A MI CUENTA</h1>
                         </span>
                 </section><!--fin de la primera fila-->
-                    <div class="datos"><!-- INGRESO DATOS -->
-                        <section><!--EMAIL-->
-                                <form action="#">
+                    <div class="datos" ><!-- INGRESO DATOS -->
+                        <section ><!--EMAIL-->
+                                <form class="email" action="#">
                                     <label class="write" for="email">Email:</label>
                                     <input class="complete" type="text" placeholder="ejemplo@correo.com">
                                 </form>
                         </section><!--fin de la EMAIL-->
-                        <section><!--PASSWORD-->
-                            <form action="#">
+                        <section ><!--PASSWORD-->
+                            <form class="pass1" action="#">
                                 <label class="write" for="pwd">Contraseña:</label>
                                 <input class="complete" type="password" id="pwd" name="pwd" value="**********">
                              </form>
                         </section><!--fin de PASSWORD-->
                     </div>
-                    <section><!--inicio de la cuarta fila-->
+                    <section class="ingresar"><!--inicio de la cuarta fila-->
                         <input type="submit" value="Ingresar">
                         <form action="#">
                             <input type="checkbox" id="recordar" name="recordar" value="recordarme">
                             <label for="recordar"> Recordarme</label><br>
-
                         </form>
                     </section><!--fin de la cuarta fila-->
                     <section><!--inicio de la quinto fila-->
-                        <a href="#">
+                        <a class="pass2" href="#">
                             <div>Olvidé mi contraseña</div>
                         </a>
-                        <button><a href="./register.html">Registrate</a></button>
+                        
                 </section><!--fin de la quinto fila-->
             </span>
         </div>
