--- a/pages/admin/login.html
+++ b/pages/admin/login.html
@@ -36,7 +36,10 @@
                         <section ><!--EMAIL-->
                                 <form class="email" action="#">
                                     <label class="write" for="email">Email:</label>
-                                    <input class="complete" type="text" placeholder="ejemplo@correo.com">
+                                    <div>
+                                        <input class="complete" type="text" placeholder="ejemplo@correo.com">
+                                        
+                                    </div>
                                 </form>
                         </section><!--fin de la EMAIL-->
                         <section ><!--PASSWORD-->
@@ -47,7 +50,7 @@
                         </section><!--fin de PASSWORD-->
                     </div>
                     <section class="ingresar"><!--inicio de la cuarta fila-->
-                        <input type="submit" value="Ingresar">
+                        <input class="boton" type="submit" value="Ingresar">
                         <form action="#">
                             <input type="checkbox" id="recordar" name="recordar" value="recordarme">
                             <label for="recordar"> Recordarme</label><br>
