terminado login con algunas cosas para corregir, tamaño letra password

--- a/pages/admin/login.html
+++ b/pages/admin/login.html
@@ -45,23 +45,24 @@
                         <section ><!--PASSWORD-->
                             <form class="pass1" action="#">
                                 <label class="write" for="pwd">Contraseña:</label>
-                                <input class="complete" type="password" id="pwd" name="pwd" value="**********">
+                                <input class="complete" type="password" id="pwd" name="pwd" placeholder=" ">
                              </form>
                         </section><!--fin de PASSWORD-->
                     </div>
                     <section class="ingresar"><!--inicio de la cuarta fila-->
                         <input class="boton" type="submit" value="Ingresar">
-                        <form action="#">
-                            <input type="checkbox" id="recordar" name="recordar" value="recordarme">
-                            <label for="recordar"> Recordarme</label><br>
-                        </form>
+                            <div class="rec">        
+                                <form action="#">
+                                    <input type="checkbox" id="recordar" name="recordar" value="recordarme">
+                                    <label for="recordar"> Recordarme</label><br>
+                                </form>
+                            </div>
                     </section><!--fin de la cuarta fila-->
-                    <section><!--inicio de la quinto fila-->
+                    <section class="forgot"><!--inicio de la quinto fila-->
                         <a class="pass2" href="#">
                             <div>Olvidé mi contraseña</div>
                         </a>
-                        
-                </section><!--fin de la quinto fila-->
+                    </section><!--fin de la quinto fila-->
             </span>
         </div>
     </main><!--fin cuerpo principal-->
