probando por error anterior

--- a/pages/admin/register.html
+++ b/pages/admin/register.html
@@ -79,9 +79,7 @@
                 </li>
 
             </ul>
-
-
-
+            <p>dfdfsdfds</p>
            
         </section><!--fin de la tercera fila-->
                
