--- a/index.html
+++ b/index.html
@@ -6,23 +6,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home / fuskoshop </title>
     <link rel="stylesheet" href="./css/index.css">
-
 </head>
 
 <body>
     <header><!--inicio header-->
         <nav class="container">
             <picture>
-                <a href="./index.html"><img src="./img/branding/logo_light_horizontal.svg"
-                        alt="Isologotipo de la marca funkoshop"></a>
+                <a href="./index.html"><img src="./img/branding/logo_light_horizontal.svg" alt="Isologotipo de la marca funkoshop"></a>
             </picture>
             <ul>
-
-                <li><a href="./pages/shop/shop.html">SHOP</a></li>
-                <li> <a href="./pages/admin/register.html">CONTACTO</a></li>
-                <li> <a href="./pages/admin/login.html">LOGIN</a></li>
-                <li><a href="./pages/shop/cart.html"> <img src="./img/icons/cart-icon.svg" alt="icono de carrito">
-                    </a> </li>
+                <li>
+                    <a href="./pages/shop/shop.html">SHOP</a>
+                </li>
+                <li>
+                    <a href="./pages/admin/register.html">CONTACTO</a>
+                </li>
+                <li>
+                    <a href="./pages/admin/login.html">LOGIN</a>
+                </li>
+                <li>
+                    <a href="./pages/shop/cart.html">
+                        <img src="./img/icons/cart-icon.svg" alt="icono de carrito">
+                    </a>
+                </li>
             </ul>
         </nav>
     </header><!--fin header-->
@@ -34,60 +40,57 @@
             <br><br>
             <a href="./pages/shop/shop.html"><input type=button class="boton-shop" value="SHOP"></a>
         </article>
-
     </section><!--fin banner-->
+
     <main class="container"> <!-- inicio cuerpo principal -->
         <section class="texto-ima">
-            <ARTICLE>
-                <h3>Star Wars &
-                    The Mandalorian </h3>
+            <article>
+                <h3 class="saga-productos">Star Wars & The Mandalorian </h3>
                 <p>Disfruta de una saga que sigue agregando personajes a su colección.</p>
                 <br><br>
                 <p class="linea-3"></p>
                 <br><br>
                 <a href="./pages/shop/shop.html"><input type=button class="boton-shop1" value="VER COLECCIÓN"></a>
-            </ARTICLE>
+                </article>
             <picture>
                 <img src="./img/star-wars/baby-yoda-1.webp" alt="Figura coleccionable de funko grogu">
             </picture>
         </section><!--fin primera seccion-->
         <section class="texto-ima-rev"><!--inicio segunda seccion-->
-            <ARTICLE>
-                <h3>POKEMON INDIGO</h3>
+            <article>
+                <h3 class="saga-productos">POKEMON INDIGO</h3>
                 <p>Atrapa todos los que puedas y disfruta de una colección llena de amigos.</p>
                 <br><br>
                 <p class="linea-3"></p>
                 <br><br>
                 <a href="./pages/shop/shop.html"><input type=button class="boton-shop1" value="VER COLECCIÓN"></a>
-            </ARTICLE>
+            </article>
             <picture>
                 <img src="./img/pokemon/vulpix-1.webp" alt="Figura coleccionable de funko vulpis de la serie pokemon">
             </picture>
         </section><!--fin segunda seccion-->
         <section class="texto-ima"><!--inicio tercera seccion-->
-            <ARTICLE>
-                <h3>HARRY POTTER </h3>
+            <article>
+                <h3 class="saga-productos">HARRY POTTER </h3>
                 <p>Revive los recuerdos de una saga llena de magia y encanto.</p>
                 <br><br>
                 <p class="linea-3"></p>
                 <br><br>
                 <a href="./pages/shop/shop.html"><input type=button class="boton-shop1" value="VER COLECCIÓN"></a>
-            </ARTICLE>
+            </article>
             <picture>
-                <img src="./img/harry-potter/snape-patronus-1.webp"
-                    alt="Figura coleccionable de funko del patronus de snape de la pelicula Harry poter">
+                <img src="./img/harry-potter/snape-patronus-1.webp" alt="Figura coleccionable de funko del patronus de snape de la pelicula Harry poter">
             </picture>
         </section><!--fin tercera seccion-->
-        <section>
-            <!--inicio cuarta seccion -->
-            <h2>Últimos lanzamientos</h2>
+        <section><!--inicio cuarta seccion -->    
+            <h2 class="ultimos-lanzamientos">Últimos lanzamientos</h2>
             <ul class="texto-ima-3">
                 <li><!--inicio cuarta seccion primer articulo-->
                     <a href="">
                         <div>
                             <p class="img-card-wars"><input type=button class="boton-nuevo" value="NUEVO"></p>
                             <p id="primer-tex">STAR WARS</p>
-                            <h4>STORMTROOPER LIGHTSABER</h4>
+                            <h4 class="nombre-producto">STORMTROOPER LIGHTSABER</h4>
                             <p id="segundo-tex">$ 1799,99</p>
                             <p id="tercer-tex">3 CUOTAS SIN INTERÉS</p>
                         </div>
@@ -98,32 +101,40 @@
                         <div>
                             <p class="img-card-pokemon"><input type=button class="boton-nuevo" value="NUEVO"></p>
                             <p id="primer-tex">POKEMON</p>
-                            <h4>PIDGEOTTO</h4>
+                            <h4 class="nombre-producto">PIDGEOTTO</h4>
                             <p id="segundo-tex">$ 1799,99</p>
                             <p id="tercer-tex">3 CUOTAS SIN INTERÉS</p>
                         </div>
-                    </a>    
-                </li>  <!--fin cuarta seccion segundo articulo-->
-                <a href="">
-                    <div>
-                        <p class="img-card-potter"><input type=button class="boton-nuevo" value="NUEVO"></p>
-                        <p id="primer-tex">HARRY POTTER</p>
-                        <h4>LUNA LOVEGOOD LION MASK</h4>
-                        <p id="segundo-tex">$ 1799,99</p>
-                        <p id="tercer-tex">3 CUOTAS SIN INTERÉS</p>
-                    </div>
-                </a>     <!--fin cuarta seccion tercer articulo-->
+                    </a>
+                </li> <!--fin cuarta seccion segundo articulo-->
+                <li>
+                    <a href="">
+                        <div><!--inicio cuarta seccion tercer articulo-->
+                            <p class="img-card-potter"><input type=button class="boton-nuevo" value="NUEVO"></p>
+                            <p id="primer-tex">HARRY POTTER</p>
+                            <h4 class="nombre-producto">LUNA LOVEGOOD LION MASK</h4>
+                            <p id="segundo-tex">$ 1799,99</p>
+                            <p id="tercer-tex">3 CUOTAS SIN INTERÉS</p>
+                        </div>
+                    </a>
+                </li><!--fin cuarta seccion tercer articulo-->
             </ul>
-        </section>
-
+        </section><!--fin cuarta seccion -->
     </main>
+
     <footer><!--inicio footer seccion -->
         <nav class="container">
             <img src="./img/branding/isotype.svg" alt="isotipo de la marca funco.com">
             <ul>
-                <li><a href="./pages/shop/shop.html">SHOP</a></li>
-                <li><a href="./pages/admin/create.html">INGRESAR</a></li>
-                <li><a href="./pages/shop/contact.html">CONTACTO</a></li>
+                <li>
+                    <a href="./pages/shop/shop.html">SHOP</a>
+                </li>
+                <li>
+                    <a href="./pages/admin/create.html">INGRESAR</a>
+                </li>
+                <li>
+                    <a href="./pages/shop/contact.html">CONTACTO</a>
+                </li>
             </ul>
         </nav>
         <p>All rights reserved 2023 - Funkoshop &copy</p>
