se agrego el carrito

--- a/pages/shop/shop.html
+++ b/pages/shop/shop.html
@@ -39,7 +39,7 @@
                 <div>
                     <p>Ordenar por</p>
                     <form class="modifi-select" action="#">
-                        <select name="ordenar" id="Vector">
+                        <select name="ordenar" type="search" id="Vector">
                             <option value="mayor">Mayor a menor</option>
                             <option value="menor">Menor a mayor</option>
                         </select>
