--- a/pages/shop/cart.html
+++ b/pages/shop/cart.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
@@ -9,119 +9,155 @@
 </head>
 
 <body>
-    <header><!--inicio header-->
+    <header><!-- INICIO HEADER -->
         <nav class="container">
             <picture class="grid-item1">
-                <a href="../../index.html"><img src="../../img/branding/logo_light_horizontal.svg"
-                        alt="Isologotipo de la marca funkoshop"></a>
+                <a href="../../index.html">
+                    <img src="../../img/branding/logo_light_horizontal.svg" alt="Isologotipo de la marca funkoshop">
+                </a>
             </picture>
             <ul>
-
-                <li><a href="../../pages/shop/shop.html">SHOP</a></li>
-                <li> <a href="../../pages/admin/register.html">CONTACTO</a></li>
-                <li> <a href="../../pages/admin/login.html">LOGIN</a></li>
-                <li><a href="../../pages/shop/cart.html"> <img src="../../img/icons/cart-icon.svg" alt="icono de carrito"> </a> </li>
+                <li>
+                    <a href="../../pages/shop/shop.html">SHOP</a>
+                </li>
+                <li>
+                    <a href="../../pages/admin/register.html">CONTACTO</a>
+                </li>
+                <li>
+                    <a href="../../pages/admin/login.html">LOGIN</a>
+                </li>
+                <li>
+                    <a href="../../pages/shop/cart.html">
+                        <img src="../../img/icons/cart-icon.svg" alt="icono de carrito">
+                    </a>
+                </li>
             </ul>
         </nav>
-    </header><!--fin header-->
-    <main>
-        <section> <!--Inicio de primera fila-->
-            <span class="carrito-header">
-                <h2>CARRITO DE COMPRAS</h2>
-            </span>
-        </section><!--fin de la primera fila-->
-        <section><!--Inicio de segunda fila-->
-            <ul class="carrito-detalles">
-                <li>DETALLE PRODUCTO</li>
-                <li>CANTIDAD</li>
-                <li>TOTAL</li>
-            </ul>
-        </section><!--fin de la segunda fila-->
-        <section> <!--Inicio de tercera fila-->
-            <article>
-                <picture>
-                    <img src="../../img/star-wars/baby-yoda-1.webp" alt="Figura Funko Pop Grogu - The Mandalorian">
-                </picture>
-                <section>
-                    <h3>BABY YODA BLUEBALL</h3>
-                    <h4>STAR WARS</h4>
-                    <p>precio: $1799,99</p>
-                </section>
-            </article>
-            <span>
-                <input type="number" />
-                <input type="button" value="+" />
-                <input type="button" value="-" />
-            </span>
-            <span>
-                <p>$3599,98</p>
-            </span>
-            <span>
-                <img src="../../img/icons/delete_trash.svg" alt="icono de borrar">
-            </span>
-        </section><!--fin de la tercera fila-->
-        <section> <!--Inicio de cuarta fila-->
-            <article>
-                <picture>
-                    <img src="../../img/pokemon/pidgeotto-1.webp" alt="Figura Funko Pop pidgeotto">
-                </picture>
-                <section>
-                    <h3>PIDGEOTTO</h3>
-                    <h4>POKEMON</h4>
-                    <p>precio: $1799,99</p>
-                </section>
-            </article>
-            <span>
-                <input type="number" />
-                <input type="button" value="+" />
-                <input type="button" value="-" />
-            </span>
-            <span>
-                <p>$1799,99</p>
-            </span>
-            <span>
-                <img src="../../img/icons/delete_trash.svg" alt="icono de borrar">
-            </span>
-        </section><!--fin de la cuarta fila-->
+    </header><!-- FIN HEADER -->
 
-      <aside>
-        <span class="carrito-header"><!--Inicio de primera fila del aside-->
-            <h2>RESUMEN</h2>
-        </span><!--fin de la primera fila del aside-->
-        <div class="carrito-resumen">
-            <ul class="carrito-cantElementos">
-                <li>CANTIDAD ELEMENTOS</li>
-                <li>3</li>
-            </ul>
-            <ul class="carrito-subtotal">
-                <li>SUBTOTAL</li>
-                <li>$ 5.399,97</li>
-            </ul>
-            <ul class="carrito-envio">
-                <li>ENVIO</li>
-                <li>$ 0,00</li>
-            </ul>
-            <ul class="carrito-total">
-                <li>TOTAL</li>
-                <li>$ 5.399,97</li>
-            </ul>
-        </div>
-        <button>IR A PAGAR</button>
-      </aside>
-       
-    </main>
+    <main class="container mainCart"><!-- INICIO MAIN -->
+        <section class="titles"><!-- inicio TITULOS-->
+            <h1 class="title" >CARRITO DE COMPRAS</h1>
+            <div class="cart_titles border_style">
+                <h2>DETALLE DE PRODUCTO</li>
+                <h2>CANTIDAD</li>
+                <h2>TOTAL</li>
+            </div>
+        </section>
 
-    <footer><!--inicio footer seccion -->
+        <section class="cart_item border_style"><!-- inicio PRODUCTO 1 -->
+            <article class="item_description">
+                <picture class="item_img">
+                    <img src="../../img/star-wars/baby-yoda-1.webp" class="item_img" alt="Figura Funko Pop Grogu - The Mandalorian">
+                </picture>
+                <div class="item_titles">
+                    <div class="item_texts">
+                        <h5 class="name_item" >BABY YODA BLUEBALL</h5>
+                        <h3 class="saga_item">STAR WARS</h3>
+                        <br>
+                        <p class="price_item">precio: $1799,99</p>
+                    </div>
+                    
+                </div>
+            </article>
+            <article class="item_cant">
+                <div class="btns">
+                    <div class="item_quant">
+                        <p class="text_quant">2</p>
+                    </div>
+                    <div class="btns_cant">
+                        <button class="btn_btn">
+                            <p class="text_btn">+</p>
+                        </button>
+                        <button class="btn_btn">
+                            <p class="text_btn">-</p>
+                        </button>
+                    </div>
+                </div>
+                <p class="price_quant">$3599,98</p>
+                <span class="btn_delete">
+                    <img src="../../img/icons/delete_trash.svg" alt="icono de borrar" class="img_delete">
+                </span>
+            </article>
+        </section>
+
+        <section class="cart_item border_style"><!-- inicio PRODUCTO 2 -->
+            <article class="item_description">
+                <picture class="item_img">
+                    <img src="../../img/pokemon/pidgeotto-1.webp" class="item_img" alt="Figura Funko Pop pidgeotto">
+                </picture>
+                <div class="item_titles">
+                    <div class="item_texts">
+                        <h5 class="name_item">PIDGEOTTO</h5>
+                        <h3 class="saga_item">POKEMON</h3>
+                    </div>
+                    <p class="price_item">precio: $1799,99</p>
+                </div>
+            </article>
+            <article class="item_cant">
+                <div class="btns">
+                    <div class="item_quant">
+                        <p class="text_quant">1</p>
+                    </div>
+                    <div class="btns_cant">
+                        <button class="btn_btn">
+                            <p class="text_btn">+</p>
+                        </button>
+                        <button class="btn_btn">
+                            <p class="text_btn">-</p>
+                        </button>
+                    </div>
+                </div>
+                <p class="price_quant">$1799,99</p>
+                <span class="btn_delete">
+                    <img src="../../img/icons/delete_trash.svg" alt="icono de borrar" class="img_delete">
+                </span>
+            </article>
+        </section>
+
+        <section class="summary"><!-- inicio de RESUMEN-->
+            <h1 class="title summary_title">RESUMEN</h1>
+            <div class="summary_block border_style">
+                <ul class="summary_box">
+                    <li class="summary_line">
+                        <h6 class="summary_subtitles">CANTIDAD DE ELEMENTOS</h6>
+                        <p class="summary_subtotal">3</p>
+                    </li>
+                    <li class="summary_line">
+                        <h6 class="summary_subtitles">SUBTOTAL</h6>
+                        <p class="summary_subtotal">$ 5.399,97</p>
+                    </li>
+                    <li class="summary_line">
+                        <h6 class="summary_subtitles">ENVIO</h6>
+                        <p class="summary_subtotal">$ 0,00</p>
+                    </li>
+                    <li class="summary_line line_totals">
+                        <h5 class="summary_final">TOTAL</h5>
+                        <p class="total_final">$ 5.399,97</p>
+                    </li>
+                </ul>
+            </div>
+            <button class="btn_pay">IR A PAGAR</button>
+        </section>
+    </main><!-- FIN MAIN -->
+
+    <footer><!-- INICIO FOOTER -->
         <nav class="container">
             <img src="../../img/branding/isotype.svg" alt="isotipo de la marca funco.com">
             <ul>
-                <li><a href="../../pages/shop/shop.html">SHOP</a></li>
-                <li><a href="../../pages/shop/login.html">INGRESAR</a></li>
-                <li><a href="../../pages/shop/contact.html">CONTACTO</a></li>
+                <li>
+                    <a href="../../pages/shop/shop.html">SHOP</a>
+                </li>
+                <li>
+                    <a href="../../pages/shop/login.html">INGRESAR</a>
+                </li>
+                <li>
+                    <a href="../../pages/shop/contact.html">CONTACTO</a>
+                </li>
             </ul>
         </nav>
         <p>All rights reserved 2023 - Funkoshop &copy</p>
-    </footer><!--fin footer seccion -->
+    </footer><!-- FIN FOOTER -->
 </body>
 
 </html>
