--- a/pages/shop/shop.html
+++ b/pages/shop/shop.html
@@ -30,7 +30,7 @@
         <aside>
             <section class="buscar">
                 <div>
-                    <p>Buscar</p>
+                    <p>BUSCAR</p>
                     <form action="#" >
                         <input id="buscarItem" type="search" placeholder="item o categoria" >
                     </form>
@@ -200,13 +200,15 @@
     </main>
 
     <div class="pagination"> <!--Inicia el indicador de paginas de shop -->
-        <a href="#"><img src="../../img/icons/left.svg" alt=""></a>
+        
+        <button class="boton-atras"> < </button>
         <a href="../../index.html">1 </a>
         <a href="../../pages/shop.html">2 </a>
         <a href="../../pages/item.html">... </a>
         <a href="#">9 </a>
         <a href="#">10 </a>
-        <a href="#"><img src="../../img/left.svg" alt=""></a>
+        <button class="boton-sig"> > </button>
+
     </div><!--fin el indicador de paginas de shop -->
 
     <footer><!--inicio footer seccion -->
