se finalizo el admin

--- a/pages/shop/shop.html
+++ b/pages/shop/shop.html
@@ -220,7 +220,7 @@
                 <li><a href="../../pages/shop/contact.html">CONTACTO</a></li>
             </ul>
         </nav>
-        <p>All rights reserved 2023 - Funkoshop &copy</p>
+        <p style="font-size: 20px;">All rights reserved 2023 - Funkoshop &copy</p>
     </footer><!--fin footer seccion -->
 
 
