--- a/pages/admin/admin.html
+++ b/pages/admin/admin.html
@@ -20,129 +20,137 @@
                 <li><a href="../../index.html" class="list-HOME">VER TIENDA</a></li>
                 <li> <a href="./admin.html" class="list-admin">ADMIN</a></li>
                 <li> <a href="../../index.html" class="list-login">SALIR</a></li>
-             
+
             </ul>
         </nav>
     </header><!--fin header-->
+    <main class="container">
+        <article class="buscarItem">
+            <img src="../../img/icons/search_icon.svg" alt="icono de búsqueda" class="tamañoImagen">
+            <input type="text" class="tipoCategoria" name="search" placeholder="código, nombre, categoría">
+        </article>
+        <article class="listProducto">
+            <h2 class="alinearItem">LISTADO DE PRODUCTOS</h2>
+            <h4>AGREGAR</h4>
+            <img src="../../img/icons/mdi_plus-box.svg" alt="simbolo + ">
+        </article>
+        <div style="margin-bottom: 30px;">
+            <ul>
+                <li class="tablaItems">
+                    <p>ID</p>
+                    <p>Código</p>
+                    <p>Nombre del Producto</p>
+                    <p>Categoría</p>
+                </li>
+                <li class="tablaItemsOl">
+                    <p>1</p>
+                    <p>STW001001</p>
+                    <p>Baby Yoda Blueball</p>
+                    <p>STAR WARS</p>
+                    <p><img src="../../img/icons/edit_pencil.svg" alt="icono de editar"></p>
+                    <p><img src="../../img/icons/delete_trash.svg" alt="icono de borrar"></td>
+                    </p>
+                </li>
+                <li class="tablaItemsOl">
+                    <p>2</p>
+                    <p>STW001002</p>
+                    <p>Boba Fett Fighter</p>
+                    <p>STAR WARS</p>
+                    <p><img src="../../img/icons/edit_pencil.svg" alt="icono de editar"></p>
+                    <p><img src="../../img/icons/delete_trash.svg" alt="icono de borrar"></p>
+                </li>
+                <li class="tablaItemsOl">
+                    <p>3</p>
+                    <p>STW001003</p>
+                    <p>Luke Skywalker & Grogu</p>
+                    <p>STAR WARS</td>
+                    <p><img src="../../img/icons/edit_pencil.svg" alt="icono de editar"></p>
+                    <p><img src="../../img/icons/delete_trash.svg" alt="icono de borrar"></p>
+                </li>
+                <li class="tablaItemsOl">
+                    <p>4</p>
+                    <p>STW001004</p>
+                    <p>Stormtrooper Lightsaber</p>
+                    <p>STAR WARS</p>
+                    <p><img src="../../img/icons/edit_pencil.svg" alt="icono de editar"></p>
+                    <p><img src="../../img/icons/delete_trash.svg" alt="icono de borrar"></p>
+                </li>
+                <li class="tablaItemsOl">
+                    <p>5</p>
+                    <p>PKM001001</p>
+                    <p>Boba Fett Fighter</p>
+                    <p>STAR WARS</p>
+                    <p><img src="../../img/icons/edit_pencil.svg" alt="icono de editar"></p>
+                    <p><img src="../../img/icons/delete_trash.svg" alt="icono de borrar"></p>
+                </li>
+                <li class="tablaItemsOl">
+                    <p>6</p>
+                    <p>PKM001002</p>
+                    <p>Boba Fett Fighter</p>
+                    <p>STAR WARS</p>
+                    <p><img src="../../img/icons/edit_pencil.svg" alt="icono de editar"></p>
+                    <p><img src="../../img/icons/delete_trash.svg" alt="icono de borrar"></p>
+                </li>
+                <li class="tablaItemsOl">
+                    <p>7</p>
+                    <p>PKM001003</p>
+                    <p>Boba Fett Fighter</p>
+                    <p>STAR WARS</p>
+                    <p><img src="../../img/icons/edit_pencil.svg" alt="icono de editar"></p>
+                    <p><img src="../../img/icons/delete_trash.svg" alt="icono de borrar"></p>
+                </li>
+                <li class="tablaItemsOl">
+                    <p>8</p>
+                    <p>PKM001004</p>
+                    <p>Boba Fett Fighter</p>
+                    <p>STAR WARS</p>
+                    <p><img src="../../img/icons/edit_pencil.svg" alt="icono de editar"></p>
+                    <p><img src="../../img/icons/delete_trash.svg" alt="icono de borrar"></p>
+                </li>
+                <li class="tablaItemsOl">
+                    <p>9</p>
+                    <p>PKM001005</p>
+                    <p>Boba Fett Fighter</p>
+                    <p>STAR WARS</p>
+                    <p><img src="../../img/icons/edit_pencil.svg" alt="icono de editar"></p>
+                    <p><img src="../../img/icons/delete_trash.svg" alt="icono de borrar"></p>
+                </li>
+                <li class="tablaItemsOl">
+                    <p>10</p>
+                    <p>HPT001001</p>
+                    <p>Boba Fett Fighter</p>
+                    <p>STAR WARS</p>
+                    <p><img src="../../img/icons/edit_pencil.svg" alt="icono de editar"></p>
+                    <p><img src="../../img/icons/delete_trash.svg" alt="icono de borrar"></p>
+                </li>
+                <li class="tablaItemsOl">
+                    <p>11</p>
+                    <p>HPT001002</p>
+                    <p>Boba Fett Fighter</p>
+                    <p>STAR WARS</p>
+                    <p><img src="../../img/icons/edit_pencil.svg" alt="icono de editar"></p>
+                    <p><img src="../../img/icons/delete_trash.svg" alt="icono de borrar"></p>
+                </li>
+                <li class="tablaItemsOl">
+                    <p>12</p>
+                    <p>HPT001003</p>
+                    <p>Boba Fett Fighter</p>
+                    <p>STAR WARS</p>
+                    <p><img src="../../img/icons/edit_pencil.svg" alt="icono de editar"></p>
+                    <p><img src="../../img/icons/delete_trash.svg" alt="icono de borrar"></p>
+                </li>
+                <li class="tablaItemsOl">
+                    <p>13</p>
+                    <p>HPT001004</p>
+                    <p>Boba Fett Fighter</p>
+                    <p>STAR WARS</p>
+                    <p><img src="../../img/icons/edit_pencil.svg" alt="icono de editar"></p>
+                    <p><img src="../../img/icons/delete_trash.svg" alt="icono de borrar"></p>
+                </li>
+            </ul>
+        </div>
+    </main>
 
-    <span>
-        <img src="../../img/icons/search_icon.svg" alt="icono de búsqueda"><input type="text" name="search"
-            placeholder="código, nombre, categoría">
-        <table>
-            <tr>
-                <th>ID</th>
-                <th>Código</th>
-                <th>Nombre del Producto</th>
-                <th>Categoría</th>
-            </tr>
-            <tr>
-                <td>1</td>
-                <td>STW001001</td>
-                <td>Baby Yoda Blueball</td>
-                <td>STAR WARS</td>
-                <td><img src="../../img/icons/edit_pencil.svg" alt="icono de editar"></td>
-                <td><img src="../../img/icons/delete_trash.svg" alt="icono de borrar"></td>
-            </tr>
-            <tr>
-                <td>2</td>
-                <td>STW001002</td>
-                <td>Boba Fett Fighter</td>
-                <td>STAR WARS</td>
-                <td><img src="../../img/icons/edit_pencil.svg" alt="icono de editar"></td>
-                <td><img src="../../img/icons/delete_trash.svg" alt="icono de borrar"></td>
-            </tr>
-            <tr>
-                <td>3</td>
-                <td>STW001003</td>
-                <td>Luke Skywalker & Grogu</td>
-                <td>STAR WARS</td>
-                <td><img src="../../img/icons/edit_pencil.svg" alt="icono de editar"></td>
-                <td><img src="../../img/icons/delete_trash.svg" alt="icono de borrar"></td>
-            </tr>
-            <tr>
-                <td>4</td>
-                <td>STW001004</td>
-                <td>Stormtrooper Lightsaber</td>
-                <td>STAR WARS</td>
-                <td><img src="../../img/icons/edit_pencil.svg" alt="icono de editar"></td>
-                <td><img src="../../img/icons/delete_trash.svg" alt="icono de borrar"></td>
-            </tr>
-            <tr>
-                <td>5</td>
-                <td>PKM001001</td>
-                <td>Boba Fett Fighter</td>
-                <td>STAR WARS</td>
-                <td><img src="../../img/icons/edit_pencil.svg" alt="icono de editar"></td>
-                <td><img src="../../img/icons/delete_trash.svg" alt="icono de borrar"></td>
-            </tr>
-            <tr>
-                <td>6</td>
-                <td>PKM001002</td>
-                <td>Boba Fett Fighter</td>
-                <td>STAR WARS</td>
-                <td><img src="../../img/icons/edit_pencil.svg" alt="icono de editar"></td>
-                <td><img src="../../img/icons/delete_trash.svg" alt="icono de borrar"></td>
-            </tr>
-            <tr>
-                <td>7</td>
-                <td>PKM001003</td>
-                <td>Boba Fett Fighter</td>
-                <td>STAR WARS</td>
-                <td><img src="../../img/icons/edit_pencil.svg" alt="icono de editar"></td>
-                <td><img src="../../img/icons/delete_trash.svg" alt="icono de borrar"></td>
-            </tr>
-            <tr>
-                <td>8</td>
-                <td>PKM001004</td>
-                <td>Boba Fett Fighter</td>
-                <td>STAR WARS</td>
-                <td><img src="../../img/icons/edit_pencil.svg" alt="icono de editar"></td>
-                <td><img src="../../img/icons/delete_trash.svg" alt="icono de borrar"></td>
-            </tr>
-            <tr>
-                <td>9</td>
-                <td>PKM001005</td>
-                <td>Boba Fett Fighter</td>
-                <td>STAR WARS</td>
-                <td><img src="../../img/icons/edit_pencil.svg" alt="icono de editar"></td>
-                <td><img src="../../img/icons/delete_trash.svg" alt="icono de borrar"></td>
-            </tr>
-            <tr>
-                <td>10</td>
-                <td>HPT001001</td>
-                <td>Boba Fett Fighter</td>
-                <td>STAR WARS</td>
-                <td><img src="../../img/icons/edit_pencil.svg" alt="icono de editar"></td>
-                <td><img src="../../img/icons/delete_trash.svg" alt="icono de borrar"></td>
-            </tr>
-            <tr>
-                <td>11</td>
-                <td>HPT001002</td>
-                <td>Boba Fett Fighter</td>
-                <td>STAR WARS</td>
-                <td><img src="../../img/icons/edit_pencil.svg" alt="icono de editar"></td>
-                <td><img src="../../img/icons/delete_trash.svg" alt="icono de borrar"></td>
-            </tr>
-            <tr>
-                <td>12</td>
-                <td>HPT001003</td>
-                <td>Boba Fett Fighter</td>
-                <td>STAR WARS</td>
-                <td><img src="../../img/icons/edit_pencil.svg" alt="icono de editar"></td>
-                <td><img src="../../img/icons/delete_trash.svg" alt="icono de borrar"></td>
-            </tr>
-            <tr>
-                <td>13</td>
-                <td>HPT001004</td>
-                <td>Boba Fett Fighter</td>
-                <td>STAR WARS</td>
-                <td><img src="../../img/icons/edit_pencil.svg" alt="icono de editar"></td>
-                <td><img src="../../img/icons/delete_trash.svg" alt="icono de borrar"></td>
-            </tr>
-
-        </table>
-
-    </span>
     <footer><!--inicio footer seccion -->
         <nav class="container">
             <img src="../../img/branding/isotype.svg" alt="isotipo de la marca funco.com">
@@ -153,7 +161,7 @@
                 <li><a href="../../pages/shop/contact.html">CONTACTO</a></li>
             </ul>
         </nav>
-        <p>All rights reserved 2023 - Funkoshop &copy</p>
+        <p style="font-size: 20px;">All rights reserved 2023 - Funkoshop &copy</p>
     </footer><!--fin footer seccion -->
 
 </body>
