--- a/pages/shop/cart.html
+++ b/pages/shop/cart.html
@@ -156,7 +156,7 @@
                 </li>
             </ul>
         </nav>
-        <p>All rights reserved 2023 - Funkoshop &copy</p>
+        <p style="font-size: 20px;">All rights reserved 2023 - Funkoshop &copy</p>
     </footer><!-- FIN FOOTER -->
 </body>
 
