se finalizo y la pagina item

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                         <div>
                             <p class="img-card-wars"><input type=button class="boton-nuevo" value="NUEVO"></p>
                             <p id="primer-tex">STAR WARS</p>
-                            <h4>STORMTROOPER LIGHTSABER</h4>
+                            <h4 style="margin-bottom: 13.9px">STORMTROOPER LIGHTSABER</h4>
                             <p id="segundo-tex">$ 1799,99</p>
                             <p id="tercer-tex">3 CUOTAS SIN INTERÉS</p>
                         </div>
@@ -98,21 +98,23 @@
                         <div>
                             <p class="img-card-pokemon"><input type=button class="boton-nuevo" value="NUEVO"></p>
                             <p id="primer-tex">POKEMON</p>
-                            <h4>PIDGEOTTO</h4>
+                            <h4 style="margin-bottom: 13.9px">PIDGEOTTO</h4>
                             <p id="segundo-tex">$ 1799,99</p>
                             <p id="tercer-tex">3 CUOTAS SIN INTERÉS</p>
                         </div>
                     </a>    
                 </li>  <!--fin cuarta seccion segundo articulo-->
-                <a href="">
-                    <div>
-                        <p class="img-card-potter"><input type=button class="boton-nuevo" value="NUEVO"></p>
-                        <p id="primer-tex">HARRY POTTER</p>
-                        <h4>LUNA LOVEGOOD LION MASK</h4>
-                        <p id="segundo-tex">$ 1799,99</p>
-                        <p id="tercer-tex">3 CUOTAS SIN INTERÉS</p>
-                    </div>
-                </a>     <!--fin cuarta seccion tercer articulo-->
+                <li>
+                    <a href="">
+                        <div>
+                            <p class="img-card-potter"><input type=button class="boton-nuevo" value="NUEVO"></p>
+                            <p id="primer-tex">HARRY POTTER</p>
+                            <h4 style="margin-bottom: 13.9px">LUNA LOVEGOOD LION MASK</h4>
+                            <p id="segundo-tex">$ 1799,99</p>
+                            <p id="tercer-tex">3 CUOTAS SIN INTERÉS</p>
+                        </div>
+                    </a>     <!--fin cuarta seccion tercer articulo-->
+                </li>
             </ul>
         </section>
 
