--- a/pages/shop/shop.html
+++ b/pages/shop/shop.html
@@ -89,7 +89,7 @@
                             <p class="img-card-wars" style="width: 304px; background-size: 108%;"><input type=button
                                     class="boton-nuevo" value="NUEVO"></p>
                             <p id="primer-tex">STAR WARS</p>
-                            <h4>STORMTROOPER LIGHTSABER</h4>
+                            <h4 style="margin-bottom: 13.9px">STORMTROOPER LIGHTSABER</h4>
                             <p id="segundo-tex">$ 1799,99</p>
                             <p id="tercer-tex">3 CUOTAS SIN INTERÉS</p>
                         </div>
@@ -101,7 +101,7 @@
                             <p class="img-card-pokemon" style="width: 304px; background-size: 108%;"><input type=button
                                     class="boton-nuevo" value="NUEVO"></p>
                             <p id="primer-tex">POKEMON</p>
-                            <h4>PIDGEOTTO</h4>
+                            <h4 style="margin-bottom: 13.9px">PIDGEOTTO</h4>
                             <p id="segundo-tex">$ 1799,99</p>
                             <p id="tercer-tex">3 CUOTAS SIN INTERÉS</p>
                         </div>
@@ -113,7 +113,7 @@
                             <p class="img-card-potter" style="width: 304px; background-size: 108%;"><input type=button
                                     class="boton-nuevo" value="NUEVO"></p>
                             <p id="primer-tex">HARRY POTTER</p>
-                            <h4>LUNA LOVEGOOD LION MASK</h4>
+                            <h4 style="margin-bottom: 13.9px">LUNA LOVEGOOD LION MASK</h4>
                             <p id="segundo-tex">$ 1799,99</p>
                             <p id="tercer-tex">3 CUOTAS SIN INTERÉS</p>
                         </div>
@@ -127,7 +127,7 @@
                             <p class="img-card-wars" style="width: 304px; background-size: 108%;"><input type=button
                                     class="boton-nuevo" value="NUEVO"></p>
                             <p id="primer-tex">STAR WARS</p>
-                            <h4>STORMTROOPER LIGHTSABER</h4>
+                            <h4 style="margin-bottom: 13.9px">STORMTROOPER LIGHTSABER</h4>
                             <p id="segundo-tex">$ 1799,99</p>
                             <p id="tercer-tex">3 CUOTAS SIN INTERÉS</p>
                         </div>
@@ -139,7 +139,7 @@
                             <p class="img-card-pokemon" style="width: 304px; background-size: 108%;"><input type=button
                                     class="boton-nuevo" value="NUEVO"></p>
                             <p id="primer-tex">POKEMON</p>
-                            <h4>PIDGEOTTO</h4>
+                            <h4 style="margin-bottom: 13.9px">PIDGEOTTO</h4>
                             <p id="segundo-tex">$ 1799,99</p>
                             <p id="tercer-tex">3 CUOTAS SIN INTERÉS</p>
                         </div>
@@ -151,7 +151,7 @@
                             <p class="img-card-potter" style="width: 304px; background-size: 108%;"><input type=button
                                     class="boton-nuevo" value="NUEVO"></p>
                             <p id="primer-tex">HARRY POTTER</p>
-                            <h4>LUNA LOVEGOOD LION MASK</h4>
+                            <h4 style="margin-bottom: 13.9px">LUNA LOVEGOOD LION MASK</h4>
                             <p id="segundo-tex">$ 1799,99</p>
                             <p id="tercer-tex">3 CUOTAS SIN INTERÉS</p>
                         </div>
@@ -165,7 +165,7 @@
                             <p class="img-card-wars" style="width: 304px; background-size: 108%;"><input type=button
                                     class="boton-nuevo" value="NUEVO"></p>
                             <p id="primer-tex">STAR WARS</p>
-                            <h4>STORMTROOPER LIGHTSABER</h4>
+                            <h4 style="margin-bottom: 13.9px">STORMTROOPER LIGHTSABER</h4>
                             <p id="segundo-tex">$ 1799,99</p>
                             <p id="tercer-tex">3 CUOTAS SIN INTERÉS</p>
                         </div>
@@ -177,7 +177,7 @@
                             <p class="img-card-pokemon" style="width: 304px; background-size: 108%;"><input type=button
                                     class="boton-nuevo" value="NUEVO"></p>
                             <p id="primer-tex">POKEMON</p>
-                            <h4>PIDGEOTTO</h4>
+                            <h4 style="margin-bottom: 13.9px">PIDGEOTTO</h4>
                             <p id="segundo-tex">$ 1799,99</p>
                             <p id="tercer-tex">3 CUOTAS SIN INTERÉS</p>
                         </div>
@@ -189,7 +189,7 @@
                             <p class="img-card-potter" style="width: 304px; background-size: 108%;"><input type=button
                                     class="boton-nuevo" value="NUEVO"></p>
                             <p id="primer-tex">HARRY POTTER</p>
-                            <h4>LUNA LOVEGOOD LION MASK</h4>
+                            <h4 style="margin-bottom: 13.9px">LUNA LOVEGOOD LION MASK</h4>
                             <p id="segundo-tex">$ 1799,99</p>
                             <p id="tercer-tex">3 CUOTAS SIN INTERÉS</p>
                         </div>
