me olvide de agregar el boton en el edit

--- a/pages/admin/edit.html
+++ b/pages/admin/edit.html
@@ -97,12 +97,12 @@
                 <article>
                     <img class="item_img_edit" src="../../img/naruko/Naruto-Shippuden-Young-konoha-aldea-figura-box.jpg"
                         alt="Figura de funkos de naruko de dorso">
-                    <p class="descripIman">Dorso</p>
+                    <p  class="descripIman">Dorso</p>
                 </article>
             </section>
         </section><!--fin de la septimo fila-->
         <section><!--inicio de la octavo fila-->
-            <input type="submit" value="Modificar Producto">
+            <input class="boton" style="width: 175px;height: 44.334px; margin-bottom: 36px;" type="submit" value="Modificar Producto">
 
         </section><!--fin de la octavo fila-->
 
